adicionado coluna de preco na tabela produtos
