# src/modules/products/useCases/createProduct/CreateProductController.ts
@@ -4,13 +4,14 @@ import { CreateProductUseCase } from './CreateProductUseCase';
 
 export class CreateProductController {
   async handle(request: Request, response: Response) {
-    const { title, quantity } = request.body;
+    const { title, quantity, price } = request.body;
 
     const createProductUseCase = container.resolve(CreateProductUseCase);
 
     const result = await createProductUseCase.execute({
       title,
       quantity,
+      price,
     });
 
     return response.status(201).json(result);
