# src/modules/products/useCases/updateProduct/UpdateProductController.ts
@@ -5,13 +5,14 @@ import { UpdateProductUseCase } from './UpdateProductUseCase';
 export class UpdateProductController {
   async handle(request: Request, response: Response) {
     const { id } = request.params;
-    const { quantity } = request.body;
+    const { quantity, price } = request.body;
 
     const updateProductUseCase = container.resolve(UpdateProductUseCase);
 
     const result = await updateProductUseCase.execute({
       id,
       quantity,
+      price,
     });
 
     return response.status(200).json(result);
